Security config fix attempt 3